--- a/notebooks/02-simple.ipynb
+++ b/notebooks/02-simple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "6411da79",
    "metadata": {},
    "outputs": [
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "4585bc46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def node_1(state: State) -> State:\n",
+    "def node_1(state: State):\n",
     "\tif state.get(\"customer_name\") is None:\n",
     "\t\treturn {\n",
     "\t\t\t\"customer_name\": \"Cesar\"\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "386a8f2d",
    "metadata": {},
    "outputs": [
